add tests for serialization